--- a/run.ipynb
+++ b/run.ipynb
@@ -50,6 +50,44 @@
     "\n",
     "play_macro(\"checkpsmapet.pmr\", speed=1.5, repeat_times=3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Starting screen search for: 'asdfasdfasdfa' ---\n",
+      "Attempting to capture monitor 1...\n",
+      "Capturing primary monitor.\n",
+      "Screenshot captured.\n",
+      "Performing OCR...\n",
+      "OCR complete.\n",
+      "Searching for 'asdfasdfasdfa' (case-insensitive)...\n",
+      "INFO: Did not find 'asdfasdfasdfa' on the screen.\n",
+      "--- Screen search finished ---\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from screenocr import find_text_on_screen\n",
+    "\n",
+    "find_text_on_screen(\"asdfasdfasdfa\")"
+   ]
   }
  ],
  "metadata": {
