--- a/run.ipynb
+++ b/run.ipynb
@@ -2,91 +2,347 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning: Could not import UserSettings from utils. Using placeholder.\n",
-      "Setting updated: Playback/Speed/None = 1.5\n",
-      "Playback speed set to: 1.5\n",
-      "Setting updated: Playback/Repeat/Times = 3\n",
-      "Repeat times set to: 3\n",
-      "Setting updated: Playback/Repeat/Delay = 0.5\n",
-      "Delay between repeats set to: 0.5 seconds.\n",
-      "Stop key set to: Key.esc\n",
-      "Macro file loaded from: checkpsmapet.pmr\n",
-      "Playing macro checkpsmapet.pmr at 1.5x speed, 3 times\n",
-      "Playback started. Press 'Key.esc' to stop.\n",
-      "--- Starting Repeat #1 ---\n",
-      "Waiting for playback to finish...\n",
-      "\n",
-      "Stop key (Key.esc) pressed. Stopping playback...\n",
-      "Playback stopping...\n",
-      "Playback stopped.\n",
-      "Playback stopped during sleep interval.\n",
-      "Releasing potentially held keys/buttons...\n",
-      "Key/Button release attempt complete.\n",
-      "Playback finished or was stopped.\n",
-      "Macro playback completed\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from macro import play_macro\n",
-    "\n",
-    "\n",
-    "play_macro(\"checkpsmapet.pmr\", speed=1.5, repeat_times=3)"
+    "from screenocr import find_text_on_screen\n",
+    "from src import psma, epic, utils\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from screenocr import find_text_on_screen\n",
+    "from src import excel, epic, utils\n",
+    "import time\n",
+    "\n",
+    "for i in range(500):\n",
+    "    patient_found = epic.find_patient()\n",
+    "    if not patient_found:\n",
+    "        excel.log_psma_pet(None)\n",
+    "    else:\n",
+    "        epic.search_psma_pet()\n",
+    "        no_psma_pet = utils.retry_till_false(lambda: find_text_on_screen('No results found for', region=(175,375, 930,960)))\n",
+    "        has_psma_pet = not no_psma_pet\n",
+    "        excel.log_psma_pet(has_psma_pet)\n",
+    "        epic.close_patient()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from screenocr import find_text_on_screen\n",
+    "from src import psma, epic\n",
+    "import time\n",
+    "\n",
+    "for i in range(500):\n",
+    "    psma.has_psma_pet()\n",
+    "    # time.sleep(1)\n",
+    "    has_psma_pet = not find_text_on_screen('No results found for')\n",
+    "\n",
+    "    for i in range(3):\n",
+    "        if not has_psma_pet:\n",
+    "            break\n",
+    "        time.sleep(1)\n",
+    "        has_psma_pet = not find_text_on_screen('No results found for')\n",
+    "\n",
+    "    psma.log_psma_pet(has_psma_pet)\n",
+    "    epic.close_patient()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Resetting main loop stop request flag.\n",
+      "--- Starting Main Processing Loop ---\n",
+      "Press 'Key.esc' at any time to stop the script.\n",
       "\n",
-      "--- Starting screen search for: 'asdfasdfasdfa' ---\n",
-      "Attempting to capture monitor 1...\n",
-      "Capturing primary monitor.\n",
+      "======= Processing Patient Iteration 1/500 =======\n",
+      "Playing macro 'find_patient.pmr'...\n",
+      "Attempting to start playback engine...\n",
+      "Starting playback thread...\n",
+      "Playback engine successfully started.\n",
+      "Waiting for playback engine to finish...\n",
+      "Repeat times (1) reached.\n",
+      "Playback engine loop finished or was stopped.\n",
+      "Releasing 4 potentially held keys...\n",
+      "Playback thread marking itself as finished.\n",
+      "Playback thread terminating.\n",
+      "Wait finished. Playback engine stopped or main stop requested.\n",
+      "Macro 'find_patient.pmr' finished.\n",
+      "\n",
+      "--- Starting screen search for: 'No patients were found' ---\n",
+      "Searching within region: (22, 336, 909, 404)\n",
+      "Attempting to capture region...\n",
+      "Capturing region: (22, 336, 909, 404)\n",
       "Screenshot captured.\n",
       "Performing OCR...\n",
       "OCR complete.\n",
-      "Searching for 'asdfasdfasdfa' (case-insensitive)...\n",
-      "INFO: Did not find 'asdfasdfasdfa' on the screen.\n",
-      "--- Screen search finished ---\n"
+      "Searching for 'No patients were found' (case-insensitive)...\n",
+      "EXTRACTED TEXT Results || Recent Patients ’\n",
+      "\n",
+      "Match MRN Patient Name Date Of Birth LegalSex Phone ‘Street Addred\n",
+      "\n",
+      "INFO: Did not find 'No patients were found' on the screen.\n",
+      "--- Screen search finished ---\n",
+      "Playing macro 'view_found_patient.pmr'...\n",
+      "Attempting to start playback engine...\n",
+      "Starting playback thread...\n",
+      "Playback engine successfully started.\n",
+      "Waiting for playback engine to finish...\n",
+      "Repeat times (1) reached.\n",
+      "Playback engine loop finished or was stopped.\n",
+      "Releasing 4 potentially held keys...\n",
+      "Playback thread marking itself as finished.\n",
+      "Playback thread terminating.\n",
+      "Wait finished. Playback engine stopped or main stop requested.\n",
+      "Macro 'view_found_patient.pmr' finished.\n",
+      "\n",
+      "--- Starting screen search for: 'Break-the-Glass' ---\n",
+      "Searching within region: (175, 240, 305, 365)\n",
+      "Attempting to capture region...\n",
+      "Capturing region: (175, 240, 305, 365)\n",
+      "Screenshot captured.\n",
+      "Performing OCR...\n",
+      "OCR complete.\n",
+      "Searching for 'Break-the-Glass' (case-insensitive)...\n",
+      "EXTRACTED TEXT Break-the-Glass\n",
+      "\n",
+      "The patient\n",
+      "need to acce\n",
+      "proceed.\n",
+      "\n",
+      "‘You need to Break-th\n",
+      "\n",
+      "SUCCESS: Found 'Break-the-Glass' on the screen.\n",
+      "--- Screen search finished ---\n",
+      "Playing macro 'close_break_glass.pmr'...\n",
+      "Attempting to start playback engine...\n",
+      "Starting playback thread...\n",
+      "Playback engine successfully started.\n",
+      "Waiting for playback engine to finish...\n",
+      "Repeat times (1) reached.\n",
+      "Playback engine loop finished or was stopped.\n",
+      "Releasing 4 potentially held keys...\n",
+      "Playback thread marking itself as finished.\n",
+      "Playback thread terminating.\n",
+      "Wait finished. Playback engine stopped or main stop requested.\n",
+      "Macro 'close_break_glass.pmr' finished.\n",
+      "Playing macro 'close_patient_lookup.pmr'...\n",
+      "Attempting to start playback engine...\n",
+      "Starting playback thread...\n",
+      "Playback engine successfully started.\n",
+      "Waiting for playback engine to finish...\n",
+      "Repeat times (1) reached.\n",
+      "Playback engine loop finished or was stopped.\n",
+      "Releasing 4 potentially held keys...\n",
+      "Playback thread marking itself as finished.\n",
+      "Playback thread terminating.\n",
+      "Wait finished. Playback engine stopped or main stop requested.\n",
+      "Macro 'close_patient_lookup.pmr' finished.\n",
+      "Playing macro 'log_none_psma.pmr'...\n",
+      "Attempting to start playback engine...\n",
+      "Starting playback thread...\n",
+      "Playback engine successfully started.\n",
+      "Waiting for playback engine to finish...\n",
+      "Repeat times (1) reached.\n",
+      "Playback engine loop finished or was stopped.\n",
+      "Releasing 4 potentially held keys...\n",
+      "Playback thread marking itself as finished.\n",
+      "Playback thread terminating.\n",
+      "Wait finished. Playback engine stopped or main stop requested.\n",
+      "Macro 'log_none_psma.pmr' finished.\n",
+      "------- Iteration 1 Complete -------\n",
+      "\n",
+      "======= Processing Patient Iteration 2/500 =======\n",
+      "Playing macro 'find_patient.pmr'...\n",
+      "Attempting to start playback engine...\n",
+      "Starting playback thread...\n",
+      "Playback engine successfully started.\n",
+      "Waiting for playback engine to finish...\n",
+      "Repeat times (1) reached.\n",
+      "Playback engine loop finished or was stopped.\n",
+      "Releasing 4 potentially held keys...\n",
+      "Playback thread marking itself as finished.\n",
+      "Playback thread terminating.\n",
+      "Wait finished. Playback engine stopped or main stop requested.\n",
+      "Macro 'find_patient.pmr' finished.\n",
+      "\n",
+      "--- Starting screen search for: 'No patients were found' ---\n",
+      "Searching within region: (22, 336, 909, 404)\n",
+      "Attempting to capture region...\n",
+      "Capturing region: (22, 336, 909, 404)\n",
+      "Screenshot captured.\n",
+      "Performing OCR...\n",
+      "OCR complete.\n",
+      "Searching for 'No patients were found' (case-insensitive)...\n",
+      "EXTRACTED TEXT Results || Recent Patients ’\n",
+      "\n",
+      "Match MRN Patient Name Date Of Birth LegalSex Phone ‘Street Addred\n",
+      "\n",
+      "INFO: Did not find 'No patients were found' on the screen.\n",
+      "--- Screen search finished ---\n",
+      "Playing macro 'view_found_patient.pmr'...\n",
+      "Attempting to start playback engine...\n",
+      "Starting playback thread...\n",
+      "Playback engine successfully started.\n",
+      "Waiting for playback engine to finish...\n",
+      "\n",
+      ">>> Global Stop Key (Key.esc) pressed! <<<\n",
+      "Signaling main loop termination...\n",
+      "Main loop stop request flag SET.\n",
+      "Requesting current macro playback engine stop...\n",
+      "Playback engine stop requested...\n",
+      "Setting playback engine flag to False.\n",
+      "Playback engine stop process initiated.\n",
+      "Playback stopped by external request during sleep interval.\n",
+      "Playback engine loop finished or was stopped.\n",
+      "Playback thread marking itself as finished.\n",
+      "Playback thread terminating.\n",
+      "Wait finished. Playback engine stopped or main stop requested.\n",
+      "Macro 'view_found_patient.pmr' interrupted by global stop request.\n",
+      "\n",
+      "--- Starting screen search for: 'Break-the-Glass' ---\n",
+      "Searching within region: (175, 240, 305, 365)\n",
+      "Attempting to capture region...\n",
+      "Capturing region: (175, 240, 305, 365)\n",
+      "Screenshot captured.\n",
+      "Performing OCR...\n",
+      "OCR complete.\n",
+      "Searching for 'Break-the-Glass' (case-insensitive)...\n",
+      "EXTRACTED TEXT \n",
+      "INFO: Did not find 'Break-the-Glass' on the screen.\n",
+      "--- Screen search finished ---\n",
+      "Skipping macro 'log_none_psma.pmr' as main loop stop is requested.\n",
+      "------- Iteration 2 Complete -------\n",
+      "\n",
+      "======= Processing Patient Iteration 3/500 =======\n",
+      "Stop request detected. Terminating main loop.\n",
+      "\n",
+      "--- Main Processing Loop Finished or Stopped ---\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      ">>> Global Stop Key (Key.esc) pressed! <<<\n",
+      "Signaling main loop termination...\n",
+      "Main loop stop request flag SET.\n",
+      "Requesting current macro playback engine stop...\n",
+      "Playback engine stop requested...\n",
+      "\n",
+      ">>> Global Stop Key (Key.esc) pressed! <<<\n",
+      "Signaling main loop termination...\n",
+      "Main loop stop request flag SET.\n",
+      "Requesting current macro playback engine stop...\n",
+      "Playback engine stop requested...\n"
+     ]
     }
    ],
    "source": [
-    "from screenocr import find_text_on_screen\n",
+    "# --- START OF FILE main.py ---\n",
     "\n",
-    "find_text_on_screen(\"asdfasdfasdfa\")"
+    "from screenocr import find_text_on_screen\n",
+    "from src import excel, epic, utils  # Assuming these use play_macro internally\n",
+    "from macro import PyMacroRecordLib  # Import the singleton class directly\n",
+    "\n",
+    "# from macro import play_macro # Don't need to import play_macro if only using singleton methods\n",
+    "from pathlib import Path\n",
+    "import time\n",
+    "\n",
+    "# --- Get the Singleton Instance ---\n",
+    "# This also initializes it and starts the global listener if not already done\n",
+    "pmr_lib = PyMacroRecordLib()\n",
+    "pmr_lib.set_stop_key(\"esc\")  # Ensure your desired stop key is set globally\n",
+    "\n",
+    "# --- Reset Stop Flag ---\n",
+    "# Good practice to reset before starting a long loop\n",
+    "pmr_lib.reset_main_loop_stop_request()\n",
+    "\n",
+    "print(f\"--- Starting Main Processing Loop ---\")\n",
+    "print(f\"Press '{pmr_lib.stop_key}' at any time to stop the script.\")\n",
+    "\n",
+    "# --- Main Loop ---\n",
+    "for i in range(500):\n",
+    "    print(f\"\\n======= Processing Patient Iteration {i+1}/500 =======\")\n",
+    "\n",
+    "    # ****** CHECK FOR STOP REQUEST ******\n",
+    "    if pmr_lib.should_main_loop_stop():\n",
+    "        print(\"Stop request detected. Terminating main loop.\")\n",
+    "        break\n",
+    "    # *************************************\n",
+    "\n",
+    "    try:\n",
+    "        patient_found = epic.find_patient()  # Assuming this calls play_macro\n",
+    "        if not patient_found:\n",
+    "            excel.log_psma_pet(None)  # Assuming this calls play_macro\n",
+    "        else:\n",
+    "            epic.search_psma_pet()  # Assuming this calls play_macro\n",
+    "\n",
+    "            no_psma_pet = utils.retry_till_false(\n",
+    "                lambda: find_text_on_screen(\n",
+    "                    \"No results found for\", region=(175, 375, 930, 960)\n",
+    "                ),\n",
+    "                retries=2,\n",
+    "                delay=0.75,\n",
+    "            )\n",
+    "\n",
+    "            has_psma_pet = not no_psma_pet\n",
+    "            excel.log_psma_pet(has_psma_pet)  # Assuming this calls play_macro\n",
+    "            epic.close_patient()  # Assuming this calls play_macro\n",
+    "\n",
+    "        print(f\"------- Iteration {i+1} Complete -------\")\n",
+    "        # Optional small delay\n",
+    "        # time.sleep(0.2)\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"\\n!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!\", file=sys.stderr)\n",
+    "        print(f\"!!! EXCEPTION in iteration {i+1}: {e}\", file=sys.stderr)\n",
+    "        print(f\"!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!\", file=sys.stderr)\n",
+    "        # Optionally try to stop playback engine if error occurs\n",
+    "        if pmr_lib.is_playing():\n",
+    "            print(\"Attempting to stop playback engine due to error...\")\n",
+    "            pmr_lib.playback_engine.stop_playback()  # Directly stop engine\n",
+    "        print(\"Stopping main loop due to error.\")\n",
+    "        # You might want to add code here to ensure Epic is in a safe state\n",
+    "        break  # Stop the loop on error\n",
+    "\n",
+    "\n",
+    "# --- Outside the loop ---\n",
+    "print(\"\\n--- Main Processing Loop Finished or Stopped ---\")\n",
+    "\n",
+    "# Optional: Explicitly stop listener if needed, though daemon=True should handle exit\n",
+    "# print(\"Stopping global listener on script exit.\")\n",
+    "# pmr_lib._stop_global_listener()\n",
+    "\n",
+    "# --- END OF FILE main.py ---\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time.sleep(5)\n",
+    "for i in range(10):\n",
+    "    print(find_text_on_screen('No results found for'))"
    ]
   }
  ],
