add more verification for break the glass

--- a/run.ipynb
+++ b/run.ipynb
@@ -62,199 +62,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Resetting main loop stop request flag.\n",
-      "--- Starting Main Processing Loop ---\n",
-      "Press 'Key.esc' at any time to stop the script.\n",
-      "\n",
-      "======= Processing Patient Iteration 1/500 =======\n",
-      "Playing macro 'find_patient.pmr'...\n",
-      "Attempting to start playback engine...\n",
-      "Starting playback thread...\n",
-      "Playback engine successfully started.\n",
-      "Waiting for playback engine to finish...\n",
-      "Repeat times (1) reached.\n",
-      "Playback engine loop finished or was stopped.\n",
-      "Releasing 4 potentially held keys...\n",
-      "Playback thread marking itself as finished.\n",
-      "Playback thread terminating.\n",
-      "Wait finished. Playback engine stopped or main stop requested.\n",
-      "Macro 'find_patient.pmr' finished.\n",
-      "\n",
-      "--- Starting screen search for: 'No patients were found' ---\n",
-      "Searching within region: (22, 336, 909, 404)\n",
-      "Attempting to capture region...\n",
-      "Capturing region: (22, 336, 909, 404)\n",
-      "Screenshot captured.\n",
-      "Performing OCR...\n",
-      "OCR complete.\n",
-      "Searching for 'No patients were found' (case-insensitive)...\n",
-      "EXTRACTED TEXT Results || Recent Patients ’\n",
-      "\n",
-      "Match MRN Patient Name Date Of Birth LegalSex Phone ‘Street Addred\n",
-      "\n",
-      "INFO: Did not find 'No patients were found' on the screen.\n",
-      "--- Screen search finished ---\n",
-      "Playing macro 'view_found_patient.pmr'...\n",
-      "Attempting to start playback engine...\n",
-      "Starting playback thread...\n",
-      "Playback engine successfully started.\n",
-      "Waiting for playback engine to finish...\n",
-      "Repeat times (1) reached.\n",
-      "Playback engine loop finished or was stopped.\n",
-      "Releasing 4 potentially held keys...\n",
-      "Playback thread marking itself as finished.\n",
-      "Playback thread terminating.\n",
-      "Wait finished. Playback engine stopped or main stop requested.\n",
-      "Macro 'view_found_patient.pmr' finished.\n",
-      "\n",
-      "--- Starting screen search for: 'Break-the-Glass' ---\n",
-      "Searching within region: (175, 240, 305, 365)\n",
-      "Attempting to capture region...\n",
-      "Capturing region: (175, 240, 305, 365)\n",
-      "Screenshot captured.\n",
-      "Performing OCR...\n",
-      "OCR complete.\n",
-      "Searching for 'Break-the-Glass' (case-insensitive)...\n",
-      "EXTRACTED TEXT Break-the-Glass\n",
-      "\n",
-      "The patient\n",
-      "need to acce\n",
-      "proceed.\n",
-      "\n",
-      "‘You need to Break-th\n",
-      "\n",
-      "SUCCESS: Found 'Break-the-Glass' on the screen.\n",
-      "--- Screen search finished ---\n",
-      "Playing macro 'close_break_glass.pmr'...\n",
-      "Attempting to start playback engine...\n",
-      "Starting playback thread...\n",
-      "Playback engine successfully started.\n",
-      "Waiting for playback engine to finish...\n",
-      "Repeat times (1) reached.\n",
-      "Playback engine loop finished or was stopped.\n",
-      "Releasing 4 potentially held keys...\n",
-      "Playback thread marking itself as finished.\n",
-      "Playback thread terminating.\n",
-      "Wait finished. Playback engine stopped or main stop requested.\n",
-      "Macro 'close_break_glass.pmr' finished.\n",
-      "Playing macro 'close_patient_lookup.pmr'...\n",
-      "Attempting to start playback engine...\n",
-      "Starting playback thread...\n",
-      "Playback engine successfully started.\n",
-      "Waiting for playback engine to finish...\n",
-      "Repeat times (1) reached.\n",
-      "Playback engine loop finished or was stopped.\n",
-      "Releasing 4 potentially held keys...\n",
-      "Playback thread marking itself as finished.\n",
-      "Playback thread terminating.\n",
-      "Wait finished. Playback engine stopped or main stop requested.\n",
-      "Macro 'close_patient_lookup.pmr' finished.\n",
-      "Playing macro 'log_none_psma.pmr'...\n",
-      "Attempting to start playback engine...\n",
-      "Starting playback thread...\n",
-      "Playback engine successfully started.\n",
-      "Waiting for playback engine to finish...\n",
-      "Repeat times (1) reached.\n",
-      "Playback engine loop finished or was stopped.\n",
-      "Releasing 4 potentially held keys...\n",
-      "Playback thread marking itself as finished.\n",
-      "Playback thread terminating.\n",
-      "Wait finished. Playback engine stopped or main stop requested.\n",
-      "Macro 'log_none_psma.pmr' finished.\n",
-      "------- Iteration 1 Complete -------\n",
-      "\n",
-      "======= Processing Patient Iteration 2/500 =======\n",
-      "Playing macro 'find_patient.pmr'...\n",
-      "Attempting to start playback engine...\n",
-      "Starting playback thread...\n",
-      "Playback engine successfully started.\n",
-      "Waiting for playback engine to finish...\n",
-      "Repeat times (1) reached.\n",
-      "Playback engine loop finished or was stopped.\n",
-      "Releasing 4 potentially held keys...\n",
-      "Playback thread marking itself as finished.\n",
-      "Playback thread terminating.\n",
-      "Wait finished. Playback engine stopped or main stop requested.\n",
-      "Macro 'find_patient.pmr' finished.\n",
-      "\n",
-      "--- Starting screen search for: 'No patients were found' ---\n",
-      "Searching within region: (22, 336, 909, 404)\n",
-      "Attempting to capture region...\n",
-      "Capturing region: (22, 336, 909, 404)\n",
-      "Screenshot captured.\n",
-      "Performing OCR...\n",
-      "OCR complete.\n",
-      "Searching for 'No patients were found' (case-insensitive)...\n",
-      "EXTRACTED TEXT Results || Recent Patients ’\n",
-      "\n",
-      "Match MRN Patient Name Date Of Birth LegalSex Phone ‘Street Addred\n",
-      "\n",
-      "INFO: Did not find 'No patients were found' on the screen.\n",
-      "--- Screen search finished ---\n",
-      "Playing macro 'view_found_patient.pmr'...\n",
-      "Attempting to start playback engine...\n",
-      "Starting playback thread...\n",
-      "Playback engine successfully started.\n",
-      "Waiting for playback engine to finish...\n",
-      "\n",
-      ">>> Global Stop Key (Key.esc) pressed! <<<\n",
-      "Signaling main loop termination...\n",
-      "Main loop stop request flag SET.\n",
-      "Requesting current macro playback engine stop...\n",
-      "Playback engine stop requested...\n",
-      "Setting playback engine flag to False.\n",
-      "Playback engine stop process initiated.\n",
-      "Playback stopped by external request during sleep interval.\n",
-      "Playback engine loop finished or was stopped.\n",
-      "Playback thread marking itself as finished.\n",
-      "Playback thread terminating.\n",
-      "Wait finished. Playback engine stopped or main stop requested.\n",
-      "Macro 'view_found_patient.pmr' interrupted by global stop request.\n",
-      "\n",
-      "--- Starting screen search for: 'Break-the-Glass' ---\n",
-      "Searching within region: (175, 240, 305, 365)\n",
-      "Attempting to capture region...\n",
-      "Capturing region: (175, 240, 305, 365)\n",
-      "Screenshot captured.\n",
-      "Performing OCR...\n",
-      "OCR complete.\n",
-      "Searching for 'Break-the-Glass' (case-insensitive)...\n",
-      "EXTRACTED TEXT \n",
-      "INFO: Did not find 'Break-the-Glass' on the screen.\n",
-      "--- Screen search finished ---\n",
-      "Skipping macro 'log_none_psma.pmr' as main loop stop is requested.\n",
-      "------- Iteration 2 Complete -------\n",
-      "\n",
-      "======= Processing Patient Iteration 3/500 =======\n",
-      "Stop request detected. Terminating main loop.\n",
-      "\n",
-      "--- Main Processing Loop Finished or Stopped ---\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      ">>> Global Stop Key (Key.esc) pressed! <<<\n",
-      "Signaling main loop termination...\n",
-      "Main loop stop request flag SET.\n",
-      "Requesting current macro playback engine stop...\n",
-      "Playback engine stop requested...\n",
-      "\n",
-      ">>> Global Stop Key (Key.esc) pressed! <<<\n",
-      "Signaling main loop termination...\n",
-      "Main loop stop request flag SET.\n",
-      "Requesting current macro playback engine stop...\n",
-      "Playback engine stop requested...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# --- START OF FILE main.py ---\n",
     "\n",
@@ -279,7 +87,7 @@
     "print(f\"Press '{pmr_lib.stop_key}' at any time to stop the script.\")\n",
     "\n",
     "# --- Main Loop ---\n",
-    "for i in range(500):\n",
+    "for i in range(800):\n",
     "    print(f\"\\n======= Processing Patient Iteration {i+1}/500 =======\")\n",
     "\n",
     "    # ****** CHECK FOR STOP REQUEST ******\n",
@@ -343,6 +151,17 @@
     "time.sleep(5)\n",
     "for i in range(10):\n",
     "    print(find_text_on_screen('No results found for'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "find_text_on_screen(\n",
+    "            \"to get started\", region=(24, 374, 900, 888), save_screenshot=True\n",
+    "        )"
    ]
   }
  ],
